# disassegen

./: .gitignore  Makefile  README.md  pyproject.toml
disassegen/: __init__.py  __main__.py  _version.py  spec.py
disassegen/isa/: spec.py
disassegen/specy/ast/: binary_op.py
disassegen/utils/: bits.py
spec/2024-12/: Features.json  LICENSE
utils/: bits.py  mc.py
