[project]
name = "disassegen"
description = "Generate arbitrary language AARCH64 disassemblers from ARMARM spec"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.13"
authors = [ { name = "blacktop", email = "blacktop@users.noreply.github.com" } ]
maintainers = [ { name = "blacktop", email = "blacktop@users.noreply.github.com" } ]
dynamic = ["version"]
dependencies = [
    "click"
]

[project.urls]
"Homepage" = "https://github.com/blacktop/disassegen"

[project.scripts]
disassegen = "disassegen.__main__:main"

[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["disassegen"]

[tool.setuptools_scm]
write_to = "disassegen/_version.py"